# iai_robots

./: .gitignore  README.md
iai_armar6_description/: CMakeLists.txt  README.md  package.xml
iai_armar6_description/urdf/: armar6.urdf
iai_boxy_base/: CMakeLists.txt  manifest.xml  package.xml
iai_boxy_base/launch/: display.launch  gazebo.launch  upload.launch
iai_boxy_base/meshes/: base_link_simple.STL
iai_boxy_base/robots/: base.URDF  base.URDF.xacro
iai_boxy_bringup/: CMakeLists.txt  README.md  package.xml
iai_boxy_bringup/config/: boxy_start_config.yaml
iai_boxy_bringup/launch/: README.md  boxy_arm_ik.launch  boxy_loopback_sim_no_controllers.launch  boxy_odometry_sim.launch  boxy_saphari_sim.launch  boxy_sim.launch  boxy_ur3_test.launch  omnidrive.launch
iai_boxy_controller_configuration/: CMakeLists.txt  package.xml
iai_boxy_controller_configuration/config/: boxy_arm_effort_controller.yaml  boxy_arm_effort_position_controller.yaml  boxy_arm_joint_trajectory.yaml  boxy_head_pos_controller.yaml  boxy_l_gripper_pos_controller.yaml  boxy_r_gripper_pos_controller.yaml  boxy_real_vel_controllers.yaml  boxy_sim_vel_controllers.yaml  boxy_torso_ethercat_controller.yaml  boxy_torso_pos_controller.yaml
iai_boxy_controller_configuration/launch/: boxy_arm_effort_controller.launch  boxy_arm_effort_position_controller.launch  boxy_arm_joint_traj_controller.launch  boxy_arm_pos_controllers.launch  boxy_gripper_controller.launch  boxy_head_pos_controller.launch  boxy_mannequin_mode.launch  boxy_pos_controllers.launch  boxy_real_controllers.launch  boxy_real_vel_controllers.launch  boxy_sim_vel_controllers.launch  boxy_torso_ethercat_controller.launch  boxy_torso_pos_controller.launch  right_arm_pos_controller.launch
iai_boxy_controller_configuration/scripts/: lwr_mannequin_mode.py  wsg_50_controller.py
iai_boxy_description/: CMakeLists.txt  package.xml  urdf.rviz
iai_boxy_description/launch/: display.launch  display_one_arm.launch  gazebo.launch  moveit.launch  upload_boxy.launch
iai_boxy_description/robots/: boxy_description.urdf  boxy_description.urdf.xacro  boxy_description_roller.urdf.xacro  boxy_description_vision_target.urdf.xacro  boxy_gutted_description.urdf.xacro  make_urdf.sh  old_boxy_description.urdf.xacro
iai_boxy_description/scripts/: joint_publisher.py
iai_boxy_description/sensors/: kinect.urdf.xacro
iai_boxy_description/urdf/: boxy_description.urdf.xacro
iai_dlr_rollin_justin/: CMakeLists.txt  package.xml
iai_dlr_rollin_justin/launch/: justin_upload.launch  upload_justin.launch
iai_donbot_description/: CMakeLists.txt  package.xml
iai_donbot_description/config/: ur5_calibration.yaml
iai_donbot_description/launch/: display.launch  display_with_wheels.launch  upload.launch  upload_with_refills_finger.launch
iai_donbot_description/meshes/: refills_camera_holder_and_camera.stl
iai_donbot_description/robots/: iai_donbot.urdf.xacro  iai_donbot.xacro  iai_donbot2.xacro  iai_donbot2_with_refills_finger.xacro  iai_donbot_spawn.xacro  iai_donbot_with_refills_finger.urdf.xacro  iai_donbot_with_refills_finger.xacro  iai_donbot_with_wheels.urdf.xacro  refills_scanner_robot.xacro
iai_donbot_description/rosinstall/: catkin.rosinstall
iai_donbot_description/rviz/: urdf.rviz
iai_donbot_description/ur5_moveit_config/: .setup_assistant
iai_icub_description/: CMakeLists.txt  package.xml
iai_kinect_description/: CMakeLists.txt  package.xml
iai_kinect_description/meshes/: 68-04546_Kinect_Sensor--coarse_simple.STL
iai_kinect_description/urdf/: kinect.urdf.xacro
iai_kuka_lwr4_description/: CMakeLists.txt  manifest.xml  package.xml  urdf.rviz
iai_kuka_lwr4_description/defs/: gazebo_sensors.xml  materials.xml  util_defs.xml
iai_kuka_lwr4_description/launch/: display.launch  upload.launch
iai_kuka_lwr4_description/meshes/: angle.dae  angle.stl  arm_base.dae  arm_base.stl  arm_base_blue.dae  arm_flanche.dae  arm_flanche.stl  arm_seg_1.dae  arm_seg_2.dae  arm_seg_3.dae  arm_seg_4.dae  arm_seg_flanche.dae  arm_seg_last.dae  arm_seg_wrist.dae  arm_segment_a.dae  arm_segment_a.stl  arm_segment_a_blue.dae  arm_segment_b.dae  arm_segment_b.stl  arm_segment_b_blue.dae  arm_segment_last.dae  arm_segment_last.stl  arm_segment_last_blue.dae  arm_wrist.dae  arm_wrist.stl
iai_kuka_lwr4_description/robots/: kuka_lwr_arm.urdf.xacro
iai_kuka_lwr4_description/urdf/: kuka_lwr_arm.urdf.xacro
iai_pepper_demo_ros_bridge/: CMakeLists.txt  package.xml
iai_pepper_demo_ros_bridge/src/: pepper_bridge.py
iai_pepper_description/: CMakeLists.txt  README.md  package.xml
iai_pepper_description/launch/: display_pepper.launch  pepper_joint_state_publisher.launch
iai_pepper_description/meshes/: HeadPitch.dae  HeadPitch.mesh  HeadYaw.dae  HeadYaw.mesh  HipPitch.dae  HipPitch.mesh  HipRoll.dae  HipRoll.mesh  KneePitch.dae  KneePitch.mesh  LElbowRoll.dae  LElbowRoll.mesh  LElbowYaw.dae  LElbowYaw.mesh  LShoulderPitch.dae  LShoulderPitch.mesh  LShoulderRoll.dae  LShoulderRoll.mesh  LWristYaw.dae  LWristYaw.mesh  Phalax.dae  Phalax.mesh  PhalaxEnd.dae  PhalaxEnd.mesh  RElbowRoll.dae  RElbowRoll.mesh  RElbowYaw.dae  RElbowYaw.mesh  RShoulderPitch.dae  RShoulderPitch.mesh  RShoulderRoll.dae  RShoulderRoll.mesh  RWristYaw.dae  RWristYaw.mesh  Torso.dae  Torso.mesh  WheelB.dae  WheelFL.mesh  WheelFR.dae
iai_pepper_description/urdf/: pepper_robot_model.urdf
iai_pr2_bringup/: CMakeLists.txt  package.xml
iai_pr2_bringup/launch/: pr2-fingertip-gui-viz.launch  pr2-fingertip-marker-viz.launch  pr2-head-perception.launch  pr2-localization.launch  pr2-rosbag-sim-playback.launch  pr2.launch
iai_robots/: CMakeLists.txt  package.xml
iai_roller_description/: CMakeLists.txt  package.xml
iai_roller_description/meshes/: iai_roller.stl
iai_schunk_pw070_v6/: CMakeLists.txt  manifest.xml  package.xml
iai_table_robot_description/: CMakeLists.txt  README.md  package.xml
iai_ur3/: CMakeLists.txt  manifest.xml  package.xml  urdf.rviz
iai_urg_kevin_robot_description/: CMakeLists.txt  README.md  package.xml
iai_weiss_wsg50/: CMakeLists.txt  manifest.xml  package.xml
(+545 files in other folders)
