<?xml version="1.0"?>
<package format="2">
  <name>iai_armar6_description</name>
  <version>0.0.0</version>
  <description>This package contains the URDF of the Armar6 robot</description>

  <author>KIT</author>
  <maintainer email="kazhoyan@uni-bremen.de">GK</maintainer>

  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
