<?xml version="1.0"?>
<package>
  <name>iai_boxy_controller_configuration</name>
  <version>0.0.0</version>
  <description>
    Holds various controller configurations and launch-files for the controllers
    the Boxy robot at the IAI institute, University Bremen, Germany.
  </description>

  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>

  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/code-iai/iai_control_pkgs/issues</url>
  <url type="repository">https://github.com/code-iai/iai_control_pkgs</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>iai_robot_mechanism_controllers</run_depend>
  <run_depend>robot_mechanism_controllers</run_depend>
  <run_depend>pr2_controller_manager</run_depend>
</package>
