<package>
  <name>iai_dlr_rollin_justin</name>
  <version>0.0.0</version>
  <description>
    URDF description of the dlr rollin justin robot.
  </description>

  <maintainer email="dummy@dummy.de">dummy</maintainer>

  <author email="dummy@dummy.de">dummy</author>
  
    <license>dummy</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
