<package>
  <name>iai_pr2_bringup</name>
  <version>0.0.0</version>
  <description>
    Various launch-files to start experimental and infrastructure code
    for the PR2 at the Institute of Artificial Intelligence, Universitaet
    Bremen, Germany.
  </description>

  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>

  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/code-iai/iai_robots/issues</url>
  <url type="repository">https://github.com/code-iai/iai_robots</url>

  <buildtool_depend>catkin</buildtool_depend>
</package>
