<?xml version="1.0"?>
<package>
  <name>iai_roller_description</name>
  <version>0.0.1</version>
  <description>The iai_roller_description package contains a roller ahnd used for the robohow</description>

  <maintainer email="bbrieber@cs.uni-bremen.de">Benjamin Brieber</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>


  <export>
  </export>
</package>
