<package>
  <name>iai_schunk_pw070_v6</name>
  <version>0.0.0</version>
  <description>
    URDF description of the Schunk PW070 robotic device.
  </description>

  <maintainer email="amaldo@cs.uni-bremen.de">Alexis Maldonado</maintainer>
  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>

  <author email="amaldo@cs.uni-bremen.de">Alexis Maldonado</author>

  <license>GPLv3+</license>

  <url type="bugtracker">https://github.com/code-iai/iai_robots/issues</url>
  <url type="repository">https://github.com/code-iai/iai_robots</url>

  <buildtool_depend>catkin</buildtool_depend>

</package>
